--- a/morpion.html
+++ b/morpion.html
@@ -6,35 +6,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
-        <style>
-            body{
-                padding: 10px;
-                text-align: center;
-            }
-            table.morpion.main {
-                width: calc(min(100vh, 100vw) - 20px);
-                height: calc(min(100vh, 100vw) - 20px);
-                border-spacing: 0 !important;
-            }
-            table.morpion div.case,
-            table.morpion.sub{
-                width: 100%;
-                height: 100%;
-            }
-            table.morpion {
-                table-layout: fixed;
-                border-collapse: separate;
-                border-spacing: 10px;
-            }
-            div.case{
-                border: 5px solid black;
-                border-radius: min(1vh, 1vw);
-            }
-            div.case.sub {
-                border: 1px solid black;
-                cursor: pointer;
-            }
-        </style>
+        <link href="morpion.css" rel="stylesheet">
         <script src="morpion.js"></script>
     </head>
     <body></body>
