--- a/morpion.html
+++ b/morpion.html
@@ -7,7 +7,17 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
         <link href="morpion.css" rel="stylesheet">
-        <script src="morpion.js"></script>
+        <script src="obj.case-morpion.js"></script>
+        <script src="obj.case-click.js"></script>
+        <script src="obj.plateau-morpion.js"></script>
+        <script src="obj.plateau-petit.js"></script>
+        <script src="obj.plateau-grand.js"></script>
+        <script src="obj.giga-morpion.js"></script>
+        <script>
+            $(function(){
+                gigaMorpion = new GigaMorpion();
+            })
+        </script>
     </head>
     <body></body>
 </html>
